--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,14 +1,12 @@
 <div class="page-body">
-  <div class="ui segment">
-    <div class="ui huge breadcrumb">
-      <a class="section">Home</a>
-        <i class="right chevron icon divider"></i>
-      <a class="section">Sign Up</a>
-        <i class="right chevron icon divider"></i>
-      <a class="active section">Sign Your Dog Up</a>
-        <i class="right chevron icon divider"></i>
-      <div class="section">Pup's Preferences</div>
-    </div>
+  <div class="ui breadcrumb registration">
+    <a class="section">Home</a>
+      <i class="right chevron icon divider"></i>
+    <a class="section">User Sign Up</a>
+      <i class="right chevron icon divider"></i>
+    <a class="active section">Sign Your Dog Up</a>
+      <i class="right chevron icon divider"></i>
+    <div class="section">Pup's Preferences</div>
   </div>
 
   <div class="ui form segment">
