--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -1,15 +1,14 @@
 <div class="page-body">
-  <div class="ui segment">
-    <div class="ui huge breadcrumb">
-      <a class="section">Home</a>
-        <i class="right chevron icon divider"></i>
-      <a class="section">Sign Up</a>
-        <i class="right chevron icon divider"></i>
-      <a class="section">Sign Your Dog Up</a>
-        <i class="right chevron icon divider"></i>
-      <div class="active section">Pup's Preferences</div>
-    </div>
+  <div class="ui breadcrumb registration">
+    <a class="section">Home</a>
+      <i class="right chevron icon divider"></i>
+    <a class="section">User Sign Up</a>
+      <i class="right chevron icon divider"></i>
+    <a class="section">Sign Your Dog Up</a>
+      <i class="right chevron icon divider"></i>
+    <div class="active section">Pup's Preferences</div>
   </div>
+
   <h4>Dog Preferences</h4>
   <div class="ui segment">
     <table class="ui table">
