--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="ui error message">
+  <div id="error_explanation" class="ui message">
     <div class="header">
       <h2><%= pluralize(object.errors.count, "error") %> prohibited this <%= "#{(object.class).to_s.downcase}" %> from being saved:</h2>
     </div>
