profile page now shows unread messages per conversation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -221,3 +221,9 @@ a:hover, .button:hover {
     display: none !important;
   }
 }
+#message_list{
+  margin-right: 13px;
+}
+#message_icon{
+  margin-left: 10px;
+}
