profile page now shows unread messages per conversation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -166,6 +166,12 @@ a:hover, .button:hover {
   height: 45px;
 }
 
+#message_list{
+  margin-right: 13px;
+}
+#message_icon{
+  margin-left: 10px;
+
 .active {
   color: $primary-green !important;
   font-weight: bold;
