--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -33,8 +33,8 @@
               <%= dog.name %>
             </div>
             <div class="description">
-              <p>Bio: <%= dog.bio %></p>
-              <p>Personality Type: <%= dog.personality %></p>
+              <p><strong>Bio:</strong><%= dog.bio %><p>
+              <p><strong>Personality:</strong><%= dog.personality %><p>
             </div>
           </div>
           <div class="ui bottom attached segment">
@@ -184,7 +184,6 @@
                   <% else %>
                   <div class="description"> <%= conversation.messages.last.body %> </div>
                   <% end %>
-
                 <% end %>
               </div>
             </div>
