changing the way that cards show up on profile, welcome and filters pages

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -65,8 +65,17 @@
                     <div class="meta">
                       Adoring Human: <%= link_to dog.user.user_name, user_path(dog.user), class: "group" %>
                     </div>
-                    <div class="description" data-dog-id=<%="#{dog.id}"%>><%= dog.bio %>...<span><strong>more</strong></span>
+                    <div class="description" data-dog-id=<%="#{dog.id}"%>>
+                      <% if dog.bio.length > 100 %>
+                        <p class="bio"><%= dog.bio[0..100] %>...<span id="more-link">more</span></p>
+                      <% else %>
+                        <p class="bio"><%= dog.bio %>...<span id="more-link">more</span></p>
+                      <% end %>
                       <div class="inactive" id="more-info">
+                        <p>
+                          <%= dog.bio %>
+                          <span id="more-link">less</span>
+                        </p>
                         <ul>
                           <li><strong>Breed: </strong> <%= dog.breed %> </li>
                           <li><strong>Age: </strong> <%= dog.age %></li>
