--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -171,7 +171,7 @@ a:hover, .button:hover {
 }
 #message_icon{
   margin-left: 10px;
-
+}
 .active {
   color: $primary-green !important;
   font-weight: bold;
