--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,6 +195,9 @@ a:hover, .button:hover {
   .ui.breadcrumb.registration {
     display: none !important;
   }
+  .four.wide.column.inbox {
+    display: none !important;
+  }
 }
 
 @media (min-width: 768px) {
