--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="ui stackable three column grid page-body" id="inbox">
   <div class="row">
-    <div class="four wide column">
+    <div class="four wide column inbox">
       <div class="ui segment">
         <div class="ui medium divided animated list">
           <div class="header">
