--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -52,7 +52,7 @@
   <div class="eleven wide column">
     <div class="ui segment">
       <div class="ui segment">
-        <h3 class="ui header center aligned">Potential Playmates</h3>
+        <h3 class="ui header center aligned">Our Playmate Picks for You</h3>
         <div class="ui three column stackable grid">
             <% @dogs[0..2].each do |dog| %>
               <div class="column">
