--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -49,6 +49,7 @@
       </div>
     </div>
   </div>
+</div>
   <div class="eleven wide column">
     <div class="ui segment">
       <div class="ui segment">
