making sure site is responsive, removing and editing a few styling items

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,8 +184,10 @@ a:hover, .button:hover {
 
 .description.text{
   color: $dark-gray !important;
+  font-weight: normal !important;
 }
-@media (max-width: 767px) {
+
+@media all and (max-width: 767px) {
   .ui.mobile.only.grid, .ui.grid >.mobile.only.row {
     display: block!important;
     width: 100% !important;
@@ -196,12 +198,13 @@ a:hover, .button:hover {
   .ui.breadcrumb.registration {
     display: none !important;
   }
-  .four.wide.column.inbox {
+
+  div.inbox {
     display: none !important;
   }
 }
 
-@media (min-width: 768px) {
+@media all and (min-width: 768px) {
   .ui.computer.only.grid, .ui.grid >.computer.only.row {
     display: block!important;
   }
