--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -65,7 +65,7 @@
           <div class="menu">
             <div class="item" data-value="Chase">Chase</div>
             <div class="item" data-value="Tug-o-war">Tug-O-War</div>
-            <div class="item" data-value="Wrestling">Wrestling Back</div>
+            <div class="item" data-value="Wrestling">Wrestling</div>
             <div class="item" data-value="Fetch">Fetch</div>
             <div class="item" data-value="Tag">Tag</div>
           </div>
