--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="ui stackable three column grid page-body" id="inbox">
   <div class="row">
-    <div class="four wide column inbox">
+    <div class="column inbox">
       <div class="ui segment">
         <div class="ui medium divided animated list">
           <div class="header">
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <div class="six wide column">
+    <div class="column">
       <div class="ui segment">
         <div class="ui comments">
         <% if @conversation.sender_id == current_user.id %>
@@ -84,7 +84,7 @@
         </div>
       </div>
     </div>
-    <div class="four wide column">
+    <div class="column">
      <div class="ui segment" id = "map-container">
        <h3 class="ui dividing header">Dog parks between you and <%= recipient.first_name %></h3>
        <div id="mapbox_map" data-userlatitude=<%= current_user.latitude %> data-userlongitude=<%= current_user.longitude %> data-otherlatitude=<%= recipient.latitude %> data-otherlongitude=<%= recipient.longitude %>>
