--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -162,8 +162,13 @@ a:hover, .button:hover {
 .error {
   color: #FF0000;
 }
+
 #message_container .comment{
   margin-top: 13px;
+}
+
+.comment{
+  margin-top: 5px;
 }
 
 #message_list{
