fix unread message badge and messaging styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -162,8 +162,8 @@ a:hover, .button:hover {
 .error {
   color: #FF0000;
 }
-.comment{
-  margin-top: 5px;
+#message_container .comment{
+  margin-top: 13px;
 }
 
 #message_list{
