one last styling edit

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -202,8 +202,8 @@ a:hover, .button:hover {
     display: none !important;
   }
 
-  div.inbox {
-    display: none !important;
+  div.column.inbox {
+    display: none!important;
   }
 }
 
