fixing live update of messages

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -155,7 +155,7 @@
 
     var newComment = template(context);
 
-    $('#container').append(newComment);
+    $('#message_container').append(newComment);
 
     var convo_context = {
       convoText: content.body
